; ModuleID = '/home/carl/AnghaBench/SoftEtherVPN/src/Mayaqua/extr_Encrypt.c_P12ToBuf.c'
source_filename = "/home/carl/AnghaBench/SoftEtherVPN/src/Mayaqua/extr_Encrypt.c_P12ToBuf.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32* @P12ToBuf(i32* %0) #0 {
  %2 = alloca i32*, align 8
  %3 = alloca i32*, align 8
  %4 = alloca i32*, align 8
  %5 = alloca i32*, align 8
  store i32* %0, i32** %3, align 8
  %6 = load i32*, i32** %3, align 8
  %7 = icmp eq i32* %6, null
  br i1 %7, label %8, label %9

8:                                                ; preds = %1
  store i32* null, i32** %2, align 8
  br label %23

9:                                                ; preds = %1
  %10 = load i32*, i32** %3, align 8
  %11 = call i32* @P12ToBio(i32* %10)
  store i32* %11, i32** %4, align 8
  %12 = load i32*, i32** %4, align 8
  %13 = icmp eq i32* %12, null
  br i1 %13, label %14, label %15

14:                                               ; preds = %9
  store i32* null, i32** %2, align 8
  br label %23

15:                                               ; preds = %9
  %16 = load i32*, i32** %4, align 8
  %17 = call i32* @BioToBuf(i32* %16)
  store i32* %17, i32** %5, align 8
  %18 = load i32*, i32** %4, align 8
  %19 = call i32 @FreeBio(i32* %18)
  %20 = load i32*, i32** %5, align 8
  %21 = call i32 @SeekBuf(i32* %20, i32 0, i32 0)
  %22 = load i32*, i32** %5, align 8
  store i32* %22, i32** %2, align 8
  br label %23

23:                                               ; preds = %15, %14, %8
  %24 = load i32*, i32** %2, align 8
  ret i32* %24
}

declare dso_local i32* @P12ToBio(i32*) #1

declare dso_local i32* @BioToBuf(i32*) #1

declare dso_local i32 @FreeBio(i32*) #1

declare dso_local i32 @SeekBuf(i32*, i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
